[gd_scene load_steps=5 format=3 uid="uid://l0np81ivq3dg"]

[ext_resource type="Script" uid="uid://cc8vky3a4e80y" path="res://scripts/moveScript.gd" id="1_upsj2"]
[ext_resource type="PackedScene" uid="uid://cyows3brk4xbq" path="res://scenes/weapon.tscn" id="2_fioyg"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p1a4w"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p1a4w"]

[node name="player" type="Node3D"]

[node name="TotalPlayer" type="CharacterBody3D" parent="."]
script = ExtResource("1_upsj2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TotalPlayer"]
mesh = SubResource("CapsuleMesh_p1a4w")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TotalPlayer"]
shape = SubResource("CapsuleShape3D_p1a4w")

[node name="dashTimer" type="Timer" parent="TotalPlayer"]
process_callback = 0
wait_time = 0.06
one_shot = true

[node name="dashCooldown" type="Timer" parent="TotalPlayer"]
one_shot = true

[node name="CameraContainer" type="Node3D" parent="TotalPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.795, 0)

[node name="Camera3D" type="Camera3D" parent="TotalPlayer/CameraContainer"]

[node name="Weapon" parent="TotalPlayer/CameraContainer" instance=ExtResource("2_fioyg")]
